--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -310,12 +310,14 @@
     position:relative;
     top: 30px;
     left:0px;
-
+   z-index: 1;
     border-radius: 0.8rem;
     transition: 0.3s ease 0.15s;
     font-family: sans-serif;
 }
-
+.menu li {
+    list-style-type: none;
+}
 .menu a {
     text-decoration: none;
 }
