--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,16 @@ body {
   --foreground: var(--clr-light);
   --background: var(--clr-dark);
 }
-.toogle-mode__icon{
+.sun1{
   display: none;
+
 }
 .toogle-mode__icon1{
-  display: block;
+  display:block;
   color: white;
 
 }
+
 
 
 .DarkMode_Color {
@@ -200,24 +202,30 @@ nav .burger .line-3 {
   transform-origin: center
 }
 .center span {
-  font-size: 50px;
+  font-size: 45px;
   font-weight: 800;
   font-weight: bolder;
   display: inline-block;
-  font-size: 80px;
-  color: #ffff;
+
+  color: #1a08b9;
   letter-spacing: 1px;
 font-family: Georgia, serif;
 font-family: serif;
-animation: jell .5s forwards;
+
 }
 .heading-jump
 {
   position: absolute;
-  top:30%;
-  left: 55%;
+  top:58%;
+  left: 70%;
   margin: 0;
 }
+.Time__Date__Temp
+{
+  position: absolute;
+  left:100px;
+}
+
 
 
 
@@ -306,7 +314,10 @@ animation: jell .5s forwards;
 }
 .Main__Img {
   position: absolute;
-  top: 10px;
+  top: 30px;
+  left: 10px;
+  width:100%;
+  height: 100%;
 }
 
 @media only screen and (min-width: 1400px) {
