--- a/css/gallery.css
+++ b/css/gallery.css
@@ -55,7 +55,6 @@
   padding: 0px;
 }
 */
-
 h1{
   font-family: Satisfy;
   font-size:50px;
@@ -67,6 +66,7 @@ h1{
   -webkit-column-count:4;
   -moz-column-count:4;
   column-count:4;
+
 
   -webkit-column-gap:20px;
   -moz-column-gap:20px;
@@ -101,7 +101,7 @@ h1{
   column-count:1;
 }
 }
-#gallery img,#gallery video {
+#gallery img {
   width:100%;
   height:auto;
   margin: 4% auto;
@@ -110,16 +110,22 @@ h1{
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
-.modal-img,.model-vid{
+
+.modal-img{
+  width:100%;
+  height: 100%;
+  text-align: center;
+    box-shadow:-3px 5px 15px #000;
 
 }
 .modal-body{
   padding:0px;
-  width:400px;
-  height:400px;
-  position: absolute;
-  top: 50%;
-  left:20%;
-  z-index: 1;
-  overflow:none;
+  width:50%;
+height: 100%;
+
+
+    position: fixed;
+    top:20px;
+    left:320px;
+
 }
