--- a/css/style.css
+++ b/css/style.css
@@ -11,105 +11,123 @@
   font-family: "Roboto", sans-serif;
 }
 
-
 .group {
-	position: relative;
-	margin-bottom: 45px;
+  position: relative;
+  margin-bottom: 45px;
 }
 
-input,textarea {
-	font-size: 18px;
-	padding: 10px 10px 10px 5px;
-	-webkit-appearance: none;
-	display: block;
-	background: #fafafa;
-	color: #636363;
-	width: 100%;
-	border: none;
-	border-radius: 0;
-	border-bottom: 1px solid #757575;
+input,
+textarea {
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  -webkit-appearance: none;
+  display: block;
+  background: #fafafa;
+  color: #636363;
+  width: 100%;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #757575;
 }
 
-input:focus , textarea:focus { outline: none; }
-
+input:focus,
+textarea:focus {
+  outline: none;
+}
 
 /* Label */
 
 label {
-	color: #999;
-	font-size: 18px;
-	font-weight: normal;
-	position: absolute;
-	pointer-events: none;
-	left: 5px;
-	top: 10px;
-	transition: all 0.2s ease;
+  color: #999;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: all 0.2s ease;
 }
-
 
 /* active */
 
-input:focus ~ label, input.used ~ label ,textarea:focus ~ label,textarea.used ~ label{
-	top: -20px;
-  transform: scale(.75); left: -2px;
-	/* font-size: 14px; */
-	color: #4a89dc;
+input:focus ~ label,
+input.used ~ label,
+textarea:focus ~ label,
+textarea.used ~ label {
+  top: -20px;
+  transform: scale(0.75);
+  left: -2px;
+  /* font-size: 14px; */
+  color: #4a89dc;
 }
-
 
 /* Underline */
 
 .bar {
-	position: relative;
-	display: block;
-	width: 100%;
+  position: relative;
+  display: block;
+  width: 100%;
 }
 
-.bar:before, .bar:after {
-	content: '';
-	height: 2px;
-	width: 0;
-	bottom: 1px;
-	position: absolute;
-	background: #4a89dc;
-	transition: all 0.2s ease;
+.bar:before,
+.bar:after {
+  content: "";
+  height: 2px;
+  width: 0;
+  bottom: 1px;
+  position: absolute;
+  background: #4a89dc;
+  transition: all 0.2s ease;
 }
 
-.bar:before { left: 50%; }
+.bar:before {
+  left: 50%;
+}
 
-.bar:after { right: 50%; }
-
+.bar:after {
+  right: 50%;
+}
 
 /* active */
 
-input:focus ~ .bar:before, input:focus ~ .bar:after { width: 50%; }
-textarea:focus ~ .bar:before, textarea:focus ~ .bar:after { width: 50%; }
+input:focus ~ .bar:before,
+input:focus ~ .bar:after {
+  width: 50%;
+}
+textarea:focus ~ .bar:before,
+textarea:focus ~ .bar:after {
+  width: 50%;
+}
 
 /* Highlight */
 
 .highlight {
-	position: absolute;
-	height: 0%;
-	width: 100px;
-	top: 25%;
-	left: 0;
-	pointer-events: none;
-	opacity: 0.5;
+  position: absolute;
+  height: 0%;
+  width: 100px;
+  top: 25%;
+  left: 0;
+  pointer-events: none;
+  opacity: 0.5;
 }
-
 
 /* active */
 
-input:focus ~ .highlight,textarea:focus ~ .highlight {
-	animation: inputHighlighter 0.3s ease;
+input:focus ~ .highlight,
+textarea:focus ~ .highlight {
+  animation: inputHighlighter 0.3s ease;
 }
-
 
 /* Animations */
 
 @keyframes inputHighlighter {
-	from { background: #4a89dc; }
-	to 	{ width: 0; background: transparent; }
+  from {
+    background: #4a89dc;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
 }
 
 :root {
@@ -395,7 +413,7 @@ nav .burger .line-3 {
 .Main__Img {
   position: absolute;
   top: 30px;
-  left: 10px;
+  left: 15%;
   width: 1120px;
   height: auto;
 }
@@ -872,7 +890,7 @@ nav .burger .line-3 {
 
 /* Footer Design */
 footer {
-  background: rgb(230, 224, 224);
+  background: rgb(255, 249, 249);
   height: 40px;
 }
 
@@ -1140,24 +1158,68 @@ footer p {
   font-size: 30px;
   margin-right: 20px;
 }
-.Projects__section .Project__Second__column a {
-  text-decoration: none;
-  color: white;
-  background: #4b6cc1;
-  padding: 10px 20px;
-  border-radius: 25px;
-  transition: all 0.5s ease;
-}
-
-.Projects__section .Project__Second__column a:hover {
-  background: white;
-  border: 2px solid #4b6cc1;
-  color: #4b6cc1;
-  padding: 15px 30px;
-}
 
 .Projects__section .Project__Second__column .Project__BTn {
   margin: 15px 0px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: black;
+}
+
+.cta {
+  position: relative;
+  margin: auto;
+  padding: 19px 22px;
+  transition: all 0.2s ease;
+}
+.cta:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  border-radius: 28px;
+  background: rgba(255, 171, 157, 0.5);
+  width: 56px;
+  height: 56px;
+  transition: all 0.3s ease;
+}
+.cta span {
+  position: relative;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 900;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+  vertical-align: middle;
+}
+.cta svg {
+  position: relative;
+  top: 0;
+  margin-left: 10px;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke: #111;
+  stroke-width: 2;
+  transform: translateX(-5px);
+  transition: all 0.3s ease;
+}
+.cta:hover:before {
+  width: 100%;
+  background: #ffab9d;
+}
+.cta:hover svg {
+  transform: translateX(0);
+}
+.cta:active {
+  transform: scale(0.96);
 }
 
 @media only screen and (max-width: 576px) {
