--- a/css/gallery.css
+++ b/css/gallery.css
@@ -59,7 +59,7 @@ h1{
   font-family: Satisfy;
   font-size:50px;
   text-align:center;
-  color:black;
+
   padding:1%;
 }
 #gallery{
@@ -112,20 +112,37 @@ h1{
 }
 
 .modal-img{
-  width:100%;
-  height: 100%;
-  text-align: center;
-    box-shadow:-3px 5px 15px #000;
+  width: 50%;
+  height:100%;
+
+  margin-left: 130px;
+
 
 }
 .modal-body{
-  padding:0px;
-  width:50%;
-height: 100%;
 
+  width: 100%;
+  height:100%;
 
     position: fixed;
+    background:blur(4px);
     top:20px;
-    left:320px;
+
+    overflow:hidden;
+   display:none;
+
+}
+@media screen and  (max-device-width:995px) , screen and (max-width:995px)  {
+  .modal-body{
+
+
+     display:none;
+
+  }
+  .modal-img{
+    display:none;
+  }
+  
+
 
 }
