--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -299,19 +299,64 @@
   opacity: 1;
   transform: scale(1);
 }
-*/
+*/.menu1 {
+
+    width: 100px;
+
+    background-color: rgb(10, 0, 19);
+    position:relative;
+    top: 0px;
+    left:0px;
+   overflow:hidden;
+
+
+
+}
+.menu1 .actionsBar1 div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 0.5rem;
+
+}
+
+.menu1 .actionsBar1 div button {
+    background-color: transparent;
+    outline: none;
+    border: none;
+    border-radius: 0.5rem;
+    color: #fff;
+    width: 45px;
+    height: 45px;
+
+    font-size: 1rem;
+}
+
+.menu1 .actionsBar1 div button:hover {
+    background-color: rgb(132, 0, 255);
+}
+.menu1.open {
+    width: 240px;
+}
+
+.menuText1.open2 {
+    opacity: 1;
+    transform: translateX(0);
+}
 
 
 .menu {
 
     width: 100px;
-    height: 600px;
+    height: 586px;
     background-color: rgb(10, 0, 19);
     position:relative;
-    top: 30px;
+    top: 0px;
     left:0px;
-   z-index: 1;
-    border-radius: 0.8rem;
+   overflow:hidden;
+
     transition: 0.3s ease 0.15s;
     font-family: sans-serif;
 }
