--- a/css/gallery.css
+++ b/css/gallery.css
@@ -55,94 +55,84 @@
   padding: 0px;
 }
 */
-h1{
+h1 {
   font-family: Satisfy;
-  font-size:50px;
-  text-align:center;
+  font-size: 50px;
+  text-align: center;
 
-  padding:1%;
+  padding: 1%;
 }
-#gallery{
-  -webkit-column-count:4;
-  -moz-column-count:4;
-  column-count:4;
+#gallery {
+  -webkit-column-count: 4;
+  -moz-column-count: 4;
+  column-count: 4;
 
+  -webkit-column-gap: 20px;
+  -moz-column-gap: 20px;
+  column-gap: 20px;
+}
+@media (max-width: 1200px) {
+  #gallery {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
 
-  -webkit-column-gap:20px;
-  -moz-column-gap:20px;
-  column-gap:20px;
+    -webkit-column-gap: 20px;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
+  }
 }
-@media (max-width:1200px){
-  #gallery{
-  -webkit-column-count:3;
-  -moz-column-count:3;
-  column-count:3;
+@media (max-width: 800px) {
+  #gallery {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
 
-  -webkit-column-gap:20px;
-  -moz-column-gap:20px;
-  column-gap:20px;
+    -webkit-column-gap: 20px;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
+  }
 }
-}
-@media (max-width:800px){
-  #gallery{
-  -webkit-column-count:2;
-  -moz-column-count:2;
-  column-count:2;
-
-  -webkit-column-gap:20px;
-  -moz-column-gap:20px;
-  column-gap:20px;
-}
-}
-@media (max-width:600px){
-  #gallery{
-  -webkit-column-count:1;
-  -moz-column-count:1;
-  column-count:1;
-}
+@media (max-width: 600px) {
+  #gallery {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+  }
 }
 #gallery img {
-  width:100%;
-  height:auto;
+  width: 100%;
+  height: auto;
   margin: 4% auto;
-  box-shadow:-3px 5px 15px #000;
+  box-shadow: -3px 5px 15px #000;
   cursor: pointer;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 
-.modal-img{
+.modal-img {
   width: 50%;
-  height:100%;
+  height: 100%;
 
   margin-left: 130px;
-
-
 }
-.modal-body{
+.modal-body {
+  width: auto;
+  max-height: 100vh;
 
-  width: 100%;
-  height:100%;
+  position: fixed;
+  background: blur(4px);
+  top: 0;
+  left: 25%;
 
-    position: fixed;
-    background:blur(4px);
-    top:20px;
-
-    overflow:hidden;
-   display:none;
-
+  overflow: hidden;
+  display: none;
 }
-@media screen and  (max-device-width:995px) , screen and (max-width:995px)  {
-  .modal-body{
-
-
-     display:none;
-
+@media screen and (max-device-width: 995px), screen and (max-width: 995px) {
+  .modal-body {
+    display: none;
   }
-  .modal-img{
-    display:none;
+  .modal-img {
+    display: none;
   }
-  
-
-
 }
