--- a/css/certificates.css
+++ b/css/certificates.css
@@ -38,6 +38,10 @@ footer{
 
 @media screen and  (max-device-width:995px) , screen and (max-width:995px)  {
 
+.nav-bar
+{
+  z-index: 111;
+}
 
 .certificate__section
 {
