--- a/css/gallery.css
+++ b/css/gallery.css
@@ -111,19 +111,21 @@ h1 {
 }
 
 .modal-img {
-  width: 50%;
-  height: 100%;
+  width: 100vh;
+  height: 90vh;
+  opacity: 1;
 
-  margin-left: 130px;
 }
 .modal-body {
-  width: auto;
-  max-height: 100vh;
+  width: 100%;
+  height: 100%;
+background: rgba(0, 0, 0, 0.3);
+text-align: center;
 
   position: fixed;
   background: blur(4px);
   top: 0;
-  left: 25%;
+  right: 0;
 
   overflow: hidden;
   display: none;
