--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
   font-family: "Poppins", sans-serif;
   font-family: "Philosopher", sans-serif;
   font-family: "Roboto", sans-serif;
-
 }
 
 .cont {
@@ -117,7 +116,7 @@ textarea {
   padding: 10px 10px 10px 5px;
   -webkit-appearance: none;
   display: block;
-    color: #636363;
+  color: #636363;
   width: 100%;
   border: none;
   border-radius: 0;
@@ -127,7 +126,6 @@ textarea {
 input:focus,
 textarea:focus {
   outline: none;
-
 }
 
 /* Label */
@@ -155,7 +153,6 @@ textarea.used ~ label {
   /* font-size: 14px; */
   color: #4a89dc;
 }
-
 
 /* Underline */
 
@@ -193,7 +190,6 @@ input:focus ~ .bar:after {
 textarea:focus ~ .bar:before,
 textarea:focus ~ .bar:after {
   width: 50%;
-
 }
 
 /* Highlight */
@@ -207,7 +203,6 @@ textarea:focus ~ .bar:after {
   pointer-events: none;
   opacity: 0.5;
 }
-
 
 /* active */
 
@@ -444,9 +439,8 @@ nav .burger .line-3 {
   position: absolute;
   top: 0;
 }
-.user_img
-{
-margin-left:27vh;
+.user_img {
+  margin-left: 27vh;
   width: 115%;
   height: 100%;
 }
@@ -537,7 +531,7 @@ margin-left:27vh;
     width: 200px;
     transition: 0.5s ease-out;
     z-index: 11;
-    padding-top: 15vh!important;
+    padding-top: 15vh !important;
   }
 
   .toggle-menu {
