--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,17 @@
   font-family: "Roboto", sans-serif;
 
 }
+.loading-screen
+{
+  padding-top: 20vh;
+  text-align: center;
 
+}
+.logo
+{
+  width: 300px;
+  height: 300px;
+}
 .cont {
   width: 100%;
   height: 100vh;
@@ -506,8 +516,38 @@ margin-left:27vh;
     transform: translateY(-400%);
   }
 }
+#wrapper
+{
+  display: none;
+}
+#heading-jump
+{
+  display: none;
+}
+#First__Section-img
+{
+  display: none;
+}
 
 @media screen and (max-device-width: 995px), screen and (max-width: 995px) {
+#mob-jum
+{
+  display: none;
+}
+#heading-jump
+{
+  display: block;
+}
+#mob-user_img
+{
+  display:none;
+}
+#First__Section-img
+{
+  display: block;
+}
+
+
   .user_img {
     margin-left: 0;
   }
