--- a/css/certificates.css
+++ b/css/certificates.css
@@ -1,17 +1,14 @@
-.loading-screen
-{text-align: center;
-
+.certificate__section
+{
+  padding: 5px;
 }
 .Certificate__Display img
 {
   width: 100%;
+  padding: 10px;
 }
 
-.container
-{
-  margin:0;
 
-}
 .img-clog
 {
 
@@ -50,8 +47,8 @@ footer{
 .certificate__section
 {
   margin-top: 40px;
-  padding: 0!important;
-  padding-left: 0px!important;
+  padding: 10!important;
+
   width: 100%;
   height: 100%!important;
 }
@@ -59,13 +56,24 @@ footer{
 
 {
   padding-bottom: 10px;
-  font-size: 12px;
+  font-size: 10px;
 
+}
+.text-center h5
+{
+  font-size: 12px;
 }
 .text-center img
 {margin-top: 13px;
-  width:70px!important;
-  height: 70px!important;
+  width:50px!important;
+  height: 50px!important;
 }
-
+.side h5
+{
+  font-size: 12px;
+}
+footer
+{
+  margin-top: 50px;
+}
 }
