--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Tillana&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&family=Sail&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Philosopher&family=Poppins:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap");
 * {
   margin: 0px;
   padding: 0px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  font-family: "Philosopher", sans-serif;
-  font-family: "Roboto", sans-serif;
+  font-family: "Rubik";
+}
+
+body {
+  font-family: "Rubik";
 }
 .loading-screen {
   padding-top: 20vh;
