--- a/css/certificates.css
+++ b/css/certificates.css
@@ -28,9 +28,18 @@ footer {
   background: #fffafa;
 }
 
+.darkmode footer {
+  background: #121212;
+  color: white;
+}
+
 @media screen and (max-device-width: 995px), screen and (max-width: 995px) {
   .nav-bar {
     z-index: 111;
+  }
+
+  .cieti h1 {
+    margin-top: 20px;
   }
 
   .certificate__section {
